@@ -944,8 +944,7 @@ class GoogleCalendarInterface:
                     all_day = self.options.get('allday')
                     try:
                         new_start, new_end = utils.get_times_from_duration(
-                                val, length, all_day
-                        )
+                            val, duration=length, all_day=all_day)
                     except ValueError as exc:
                         self.printer.err_msg(str(exc))
                         sys.exit(1)
@@ -960,9 +959,9 @@ class GoogleCalendarInterface:
                     all_day = self.options.get('allday')
                 try:
                     new_start, new_end = utils.get_times_from_duration(
-                            event['start']['dateTime'], val,
-                            all_day
-                    )
+                        event['start']['dateTime'],
+                        duration=val,
+                        all_day=all_day)
                     event = self._SetEventStartEnd(new_start, new_end, event)
                 except ValueError as exc:
                     self.printer.err_msg(str(exc))
